{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 441,
  "lineage": "850124c6-03bc-7ad2-7413-676dd6ff7d7a",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03446a3af42c5e74e",
            "arn": "arn:aws:ec2:eu-west-1:179151669003:instance/i-052ae298a2c57add1",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "lab44-ec2-ssm-instance-profile",
            "id": "i-052ae298a2c57add1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ba7f844c895bccb9"
              }
            ],
            "primary_network_interface_id": "eni-0ba7f844c895bccb9",
            "private_dns": "ip-10-30-11-162.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.30.11.162",
            "region": "eu-west-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02204d1beaf25380f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-060c83aa75ef7086c",
            "tags": {
              "Environment": "full",
              "Name": "lab44-web",
              "Project": "lab44",
              "Role": "web"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-web",
              "Project": "lab44",
              "Role": "web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0a7ae02ce19772760"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "179151669003",
            "id": "i-052ae298a2c57add1",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_iam_instance_profile.ec2_ssm_instance_profile",
            "module.network.aws_iam_role.ec2_ssm_role",
            "module.network.aws_security_group.web",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_vpc.main",
            "module.network.data.aws_ami.ubuntu",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:179151669003:internet-gateway/igw-0cf0621097ff7a76e",
            "id": "igw-0cf0621097ff7a76e",
            "owner_id": "179151669003",
            "region": "eu-west-1",
            "tags": {
              "Environment": "full",
              "Name": "lab44-igw",
              "Project": "lab44"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-igw",
              "Project": "lab44"
            },
            "vpc_id": "vpc-0b8ca50b53939b82d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:179151669003:route-table/rtb-001e0586ba80c43ab",
            "id": "rtb-001e0586ba80c43ab",
            "owner_id": "179151669003",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-050e89eb12eca6ec3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "full",
              "Name": "lab44-private_rt-a",
              "Project": "lab44"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-private_rt-a",
              "Project": "lab44"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8ca50b53939b82d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "179151669003",
            "id": "rtb-001e0586ba80c43ab",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_route_table_association.public_subnet_assoc",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:179151669003:route-table/rtb-090d80435d3d15a4d",
            "id": "rtb-090d80435d3d15a4d",
            "owner_id": "179151669003",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06a1c341eb15c0fc8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "full",
              "Name": "lab44-private_rt-b",
              "Project": "lab44"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-private_rt-b",
              "Project": "lab44"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8ca50b53939b82d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "179151669003",
            "id": "rtb-090d80435d3d15a4d",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_route_table_association.public_subnet_assoc",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:179151669003:route-table/rtb-0ebee58ae6370273f",
            "id": "rtb-0ebee58ae6370273f",
            "owner_id": "179151669003",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cf0621097ff7a76e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "full",
              "Name": "lab44-public_rt",
              "Project": "lab44"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-public_rt",
              "Project": "lab44"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8ca50b53939b82d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "179151669003",
            "id": "rtb-0ebee58ae6370273f",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5cb66a7eb3ff6bf",
            "region": "eu-west-1",
            "route_table_id": "rtb-001e0586ba80c43ab",
            "subnet_id": "subnet-060c83aa75ef7086c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_route_table.private_rt",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_route_table_association.public_subnet_assoc",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09924d430f72badd2",
            "region": "eu-west-1",
            "route_table_id": "rtb-090d80435d3d15a4d",
            "subnet_id": "subnet-013ba7478874f28fb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_route_table.private_rt",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_route_table_association.public_subnet_assoc",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0017e60bf516cc89e",
            "region": "eu-west-1",
            "route_table_id": "rtb-0ebee58ae6370273f",
            "subnet_id": "subnet-06f0c1fff17395f78"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046b6160ba82cd0ee",
            "region": "eu-west-1",
            "route_table_id": "rtb-0ebee58ae6370273f",
            "subnet_id": "subnet-0dbbce6b0f3b05246"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:179151669003:security-group/sg-0eb885526263784ea",
            "description": "Allow DB from Web SG only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eb885526263784ea",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Postgres from Web SG",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a7ae02ce19772760"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "lab44-db_sg",
            "name_prefix": "",
            "owner_id": "179151669003",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "full",
              "Name": "lab44-db_sg",
              "Project": "lab44"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-db_sg",
              "Project": "lab44"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8ca50b53939b82d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "179151669003",
            "id": "sg-0eb885526263784ea",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_security_group.web",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssm_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:179151669003:security-group/sg-09209fae415f521d5",
            "description": "Allow HTTP from web SG to SSM Endpoint",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09209fae415f521d5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTPS from web SG",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a7ae02ce19772760"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "lab44-ssm_endpoint_sg",
            "name_prefix": "",
            "owner_id": "179151669003",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "full",
              "Name": "lab44-ssm_endpoint_sg",
              "Project": "lab44"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-ssm_endpoint_sg",
              "Project": "lab44"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8ca50b53939b82d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "179151669003",
            "id": "sg-09209fae415f521d5",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_security_group.web",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:179151669003:security-group/sg-0a7ae02ce19772760",
            "description": "Web service access only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a7ae02ce19772760",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP 80 from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS 443 from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "lab44-web_sg",
            "name_prefix": "",
            "owner_id": "179151669003",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "full",
              "Name": "lab44-web_sg",
              "Project": "lab44"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-web_sg",
              "Project": "lab44"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8ca50b53939b82d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "179151669003",
            "id": "sg-0a7ae02ce19772760",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:179151669003:subnet/subnet-060c83aa75ef7086c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.30.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060c83aa75ef7086c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "179151669003",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Environment": "full",
              "Name": "lab44-private_subnet-a",
              "Project": "lab44",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-private_subnet-a",
              "Project": "lab44",
              "Tier": "private"
            },
            "vpc_id": "vpc-0b8ca50b53939b82d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "179151669003",
            "id": "subnet-060c83aa75ef7086c",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:179151669003:subnet/subnet-013ba7478874f28fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.30.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-013ba7478874f28fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "179151669003",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Environment": "full",
              "Name": "lab44-private_subnet-b",
              "Project": "lab44",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-private_subnet-b",
              "Project": "lab44",
              "Tier": "private"
            },
            "vpc_id": "vpc-0b8ca50b53939b82d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "179151669003",
            "id": "subnet-013ba7478874f28fb",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:179151669003:subnet/subnet-06f0c1fff17395f78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.30.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f0c1fff17395f78",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "179151669003",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Environment": "full",
              "Name": "lab44-public_subnet-a",
              "Project": "lab44",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-public_subnet-a",
              "Project": "lab44",
              "Tier": "public"
            },
            "vpc_id": "vpc-0b8ca50b53939b82d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "179151669003",
            "id": "subnet-06f0c1fff17395f78",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:179151669003:subnet/subnet-0dbbce6b0f3b05246",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.30.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dbbce6b0f3b05246",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "179151669003",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Environment": "full",
              "Name": "lab44-public_subnet-b",
              "Project": "lab44",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-public_subnet-b",
              "Project": "lab44",
              "Tier": "public"
            },
            "vpc_id": "vpc-0b8ca50b53939b82d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "179151669003",
            "id": "subnet-0dbbce6b0f3b05246",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:179151669003:vpc/vpc-0b8ca50b53939b82d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.30.0.0/16",
            "default_network_acl_id": "acl-039774c1418f33ebc",
            "default_route_table_id": "rtb-0fdf9aea34287e5a6",
            "default_security_group_id": "sg-0386cd017434a47c1",
            "dhcp_options_id": "dopt-0d3e33a46ba198995",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b8ca50b53939b82d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fdf9aea34287e5a6",
            "owner_id": "179151669003",
            "region": "eu-west-1",
            "tags": {
              "Environment": "full",
              "Name": "lab44-vpc",
              "Project": "lab44"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-vpc",
              "Project": "lab44"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "179151669003",
            "id": "vpc-0b8ca50b53939b82d",
            "region": "eu-west-1"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:179151669003:vpc-endpoint/vpce-094f17187ee68fc7b",
            "dns_entry": [
              {
                "dns_name": "vpce-094f17187ee68fc7b-n4vb1nmf.ec2messages.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-094f17187ee68fc7b-n4vb1nmf-eu-west-1b.ec2messages.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-094f17187ee68fc7b-n4vb1nmf-eu-west-1a.ec2messages.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "ec2messages.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z079863826V089GXF61IT"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-094f17187ee68fc7b",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-07a55ede5787c49ed",
              "eni-0a29caa74a20a2355"
            ],
            "owner_id": "179151669003",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "eu-west-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-09209fae415f521d5"
            ],
            "service_name": "com.amazonaws.eu-west-1.ec2messages",
            "service_region": "eu-west-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.30.11.217",
                "subnet_id": "subnet-060c83aa75ef7086c"
              },
              {
                "ipv4": "10.30.12.217",
                "subnet_id": "subnet-013ba7478874f28fb"
              }
            ],
            "subnet_ids": [
              "subnet-013ba7478874f28fb",
              "subnet-060c83aa75ef7086c"
            ],
            "tags": {
              "Environment": "full",
              "Name": "lab44-ec2messages_endpoint",
              "Project": "lab44"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-ec2messages_endpoint",
              "Project": "lab44"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b8ca50b53939b82d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "179151669003",
            "id": "vpce-094f17187ee68fc7b",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_security_group.ssm_endpoint",
            "module.network.aws_security_group.web",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:179151669003:vpc-endpoint/vpce-0761ccf37bbe16618",
            "dns_entry": [
              {
                "dns_name": "vpce-0761ccf37bbe16618-q1laea2f.ssm.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0761ccf37bbe16618-q1laea2f-eu-west-1a.ssm.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0761ccf37bbe16618-q1laea2f-eu-west-1b.ssm.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "ssm.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z0330342M1Z5UJ0JXEGY"
              },
              {
                "dns_name": "ssm.eu-west-1.api.aws",
                "hosted_zone_id": "Z015058824GITO8J1YQ0P"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0761ccf37bbe16618",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-013dc7c09047cae01",
              "eni-0e42a5d697316e201"
            ],
            "owner_id": "179151669003",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "eu-west-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-09209fae415f521d5"
            ],
            "service_name": "com.amazonaws.eu-west-1.ssm",
            "service_region": "eu-west-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.30.11.9",
                "subnet_id": "subnet-060c83aa75ef7086c"
              },
              {
                "ipv4": "10.30.12.132",
                "subnet_id": "subnet-013ba7478874f28fb"
              }
            ],
            "subnet_ids": [
              "subnet-013ba7478874f28fb",
              "subnet-060c83aa75ef7086c"
            ],
            "tags": {
              "Environment": "full",
              "Name": "lab44-ssm_endpoint",
              "Project": "lab44"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-ssm_endpoint",
              "Project": "lab44"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b8ca50b53939b82d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "179151669003",
            "id": "vpce-0761ccf37bbe16618",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_security_group.ssm_endpoint",
            "module.network.aws_security_group.web",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:179151669003:vpc-endpoint/vpce-05426416504a88c92",
            "dns_entry": [
              {
                "dns_name": "vpce-05426416504a88c92-273e0elg.ssmmessages.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-05426416504a88c92-273e0elg-eu-west-1b.ssmmessages.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-05426416504a88c92-273e0elg-eu-west-1a.ssmmessages.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "ssmmessages.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z02520202SFVG6O0OSGKW"
              },
              {
                "dns_name": "ssmmessages.eu-west-1.api.aws",
                "hosted_zone_id": "Z015011718V6O6YNLCMQD"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-05426416504a88c92",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0115a5d32f5563a5c",
              "eni-075f4dbcfee4bac4f"
            ],
            "owner_id": "179151669003",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "eu-west-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-09209fae415f521d5"
            ],
            "service_name": "com.amazonaws.eu-west-1.ssmmessages",
            "service_region": "eu-west-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.30.11.102",
                "subnet_id": "subnet-060c83aa75ef7086c"
              },
              {
                "ipv4": "10.30.12.112",
                "subnet_id": "subnet-013ba7478874f28fb"
              }
            ],
            "subnet_ids": [
              "subnet-013ba7478874f28fb",
              "subnet-060c83aa75ef7086c"
            ],
            "tags": {
              "Environment": "full",
              "Name": "lab44-ssmmessages_endpoint",
              "Project": "lab44"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-ssmmessages_endpoint",
              "Project": "lab44"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b8ca50b53939b82d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "179151669003",
            "id": "vpce-05426416504a88c92",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_security_group.ssm_endpoint",
            "module.network.aws_security_group.web",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    }
  ]
}